--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,13 @@ ul{
     padding: 0;
     list-style:none;
 }
+h1{
+    font-size: 24px!important;
+    color: #333!important;
+    line-height: 1.3!important;
+    letter-spacing: 0.6px;
+    font-weight: 600!important;
+}
 /* clearfix */
 .clearfix:before,
 .clearfix:after {
@@ -16,14 +23,14 @@ ul{
 clearfix {
     zoom: 1; /* For IE 6/7 (trigger hasLayout) */
 }
-/*  */
+/* begin css */
 .main-layout{
     background: #eee;
-    padding: 20px;
+    padding: 30px;
 }
 .todo-section{
     float: left;
-    width: 33.3%;
+    width: 30%;
 }
 .todo-section .wrapper{
     position: relative;
@@ -47,23 +54,173 @@ clearfix {
     transition: all 0.5s ease;
     z-index: 9;
     right: 0;
-    background: rgba(0,0,0,.8);
+    opacity: .98;
+    background: #5a8f7b; /* Old browsers */
+    background: -moz-linear-gradient(top, #5a8f7b 0%, #69a9b3 50%, #3d8bb1 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #5a8f7b 0%,#69a9b3 50%,#3d8bb1 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #5a8f7b 0%,#69a9b3 50%,#3d8bb1 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5a8f7b', endColorstr='#3d8bb1',GradientType=0 ); /* IE6-9 */
 }
 .todo-section .addTask.inProggress{
     top: 0;
     bottom: 0;
-}
-.plusAdd{
-    background-color: transparent;
-    border: none;
-    outline: none!important;
 }
 .buttonToggle{
     position: absolute;
     left: 0;
     right: 0;
     z-index: 10;
-    bottom: 10px;
+    bottom: 15px;
     margin: 0 auto;
     text-align: center;
+}
+form .lay{
+    background-color: #fff;
+    padding: 40px 20px;
+    margin-top: 100px;
+}
+.addTask input{
+    transition: all 0.5s ease;
+    width: 96%;
+    padding: 4px 10px;
+    margin-bottom: 20px;
+    height: 36px;
+    font-size: 14px;
+    color: #333;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: 1px solid #ddd;
+}
+.addTask input:focus{
+    border: 1px solid #69a9b3;
+}
+.addTask input::placeholder{
+    font-size: 13px;
+    color: #ccc;
+}
+.addTask button{
+    transition: all 0.5s ease;
+    border: 1px solid #3b89af;
+    background-color: #3b89af;
+    padding: 7px 25px;
+    color: #fff;
+    font-size: 13px;
+    margin-top: 10px;
+    text-transform: uppercase;
+}
+.addTask button:hover{
+    background-color: #387595;
+}
+.today-todolist ul{
+    text-align: left;
+}
+.plusAdd{
+    background-color: transparent;
+    border: none;
+    transition: all 0.5s ease;
+    outline: none!important;
+    margin-left: -15px;
+    transform: translate(0, 0);
+}
+.plusAdd span{
+    display: inline-block;
+    transition: all 0.5s ease;
+    transform: rotate(0deg);
+}
+.plusAdd .hor{
+    width: 19px;
+    height: 3px;
+    background-color: #ee807b;
+    border-radius: 6px;
+    position: relative;
+    left: 11px;
+}
+.plusAdd .vert{
+    position: relative;
+    top: 8px;
+    width: 3px;
+    height: 19px;
+    background-color: #ee807b;
+    border-radius: 6px;
+}
+.plusAdd.active span{
+    background-color: #fff;
+    transform: rotate(45deg);
+}
+.plusAdd.active{
+    transform: translate(0, 30px);
+}
+.add-task-text{
+    margin: 7px 0 0 0;
+    font-size: 13px;
+    font-weight: 500;
+    letter-spacing: 0.4px;
+    color: #777;
+    transition: all 0.5s ease;
+    position: relative;
+    bottom: 0;
+}
+.plusAdd.active + p{
+    bottom: -50px;
+    opacity: 0;
+}
+.calendar-wrap{
+    float: left;
+    width: 30%;
+    margin-left: 5%;
+}
+.calendar-wrap button{
+    background: transparent;
+    border: none;
+}
+.calendar-wrap .react-calendar__navigation__next2-button,
+.calendar-wrap .react-calendar__navigation__prev2-button{
+    display: none;
+}
+.react-calendar{
+    background-color: #fff;
+    padding: 8px 15px;
+    border-radius: 5px;
+}
+.react-calendar button{
+    outline: none!important;
+}
+.react-calendar__month-view__weekdays__weekday{
+    color: #3d8bb1;
+    font-size: 13px;
+    text-align: center;
+    font-weight: 600;
+}
+.react-calendar__tile{
+    font-size: 12px;
+    color: #333;
+    padding: 2px;
+}
+.react-calendar__tile time{
+    display: block;
+    width: 20px;
+    line-height: 22px;
+    height: 20px;
+    margin: 0 auto;
+}
+.react-calendar__month-view__days__day--neighboringMonth{
+    color: #ccc;
+}
+.react-calendar__navigation__label{
+    margin-bottom: 3px;
+    color: #111;
+}
+.react-calendar__tile--now{
+    font-weight: 600;
+}
+.react-calendar__tile--now time{
+    background: #3d8bb1;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    color: #fff;
+}
+.react-calendar__tile--active time{
+    color: #3d8bb1;
+    font-weight: 600;
 }
